Rename an example DDC-SE-01 to DDC-SE-01+Serial
Signed-off-by: Roman3349 <ondracek.roman@centrum.cz>

--- a/examples/DDC-SE-01+Serial/platformio.ini
+++ b/examples/DDC-SE-01+Serial/platformio.ini
@@ -17,6 +17,9 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
+[platformio]
+src_dir = DDC-SE-01+Serial
+
 [env:uno]
 platform = atmelavr
 framework = arduino
