--- a/examples/DDC-SE-01-W5100-Thingspeak/platformio.ini
+++ b/examples/DDC-SE-01-W5100-Thingspeak/platformio.ini
@@ -18,7 +18,7 @@
 # targets = upload
 
 [platformio]
-src_dir = DDC-SE-01+Serial
+src_dir = DDC-SE-01-W5100-Thingspeak
 
 [env:uno]
 platform = atmelavr
