--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ cache:
         - "~/.platformio"
 env:
     - PLATFORMIO_CI_SRC=examples/DDC-SE-01-Serial/DDC-SE-01-Serial/DDC-SE-01-Serial.ino
+    - PLATFORMIO_CI_SRC=examples/DDC-SE-01-LCD-I2C/DDC-SE-01-LCD-I2C/DDC-SE-01-LCD-I2C.ino
     - PLATFORMIO_CI_SRC=examples/DDC-SE-01-W5100-Thingspeak/DDC-SE-01-W5100-Thingspeak/DDC-SE-01-W5100-Thingspeak.ino
 install:
     # Install PlatformIO
     - pip install -U platformio
+    # Install LiquidCrystal_I2C library
+    - platformio lib install 576
 script:
     - platformio ci --lib="." --board=uno --board=due --board=leonardo --board=nanoatmega328 --board=diecimilaatmega168 --board=megaatmega2560 --board=megaatmega1280 --board=nodemcuv2
