Install @PlatformIO library to global storage

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ install:
     # Install development version of PlatformIO 3.0 (remove line below after release)
     - pip install -U https://github.com/platformio/platformio/archive/develop.zip
     
-    - platformio lib install LiquidCrystal_I2C
+    - platformio lib -g install LiquidCrystal_I2C
 script:
     - platformio ci --lib="." --project-conf platformio.ini
