--- a/examples/Float/platformio.ini
+++ b/examples/Float/platformio.ini
@@ -17,6 +17,9 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
+[platformio]
+src_dir = Float
+
 [env:uno]
 platform = atmelavr
 framework = arduino
@@ -51,13 +54,3 @@ board = chipkit_uc32
 platform = espressif
 framework = arduino
 board = nodemcuv2
-
-[env:genuino101]
-platform = intel_arc32
-framework = arduino
-board = genuino101
-
-[env:teensy31]
-platform = teensy
-framework = arduino
-board = teensy31
