--- a/examples/Alert/platformio.ini
+++ b/examples/Alert/platformio.ini
@@ -18,46 +18,39 @@
 # targets = upload
 
 [platformio]
-src_dir = DDC-SE-01-LCD-I2C
+src_dir = Alert
 
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
-lib_install = 576
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
-lib_install = 576
 
 [env:leonardo]
 platform = atmelavr
 framework = arduino
 board = leonardo
-lib_install = 576
 
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
-lib_install = 576
 
 [env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
-lib_install = 576
 
 [env:chipkit_uc32]
 platform = microchippic32
 framework = arduino
 board = chipkit_uc32
-lib_install = 576
 
 [env:nodemcuv2]
 platform = espressif
 framework = arduino
 board = nodemcuv2
-lib_install = 576
