--- a/examples/LCD-I2C/platformio.ini
+++ b/examples/LCD-I2C/platformio.ini
@@ -17,47 +17,47 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
+[platformio]
+src_dir = LCD-I2C
+
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
+lib_install = 576
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
+lib_install = 576
 
 [env:leonardo]
 platform = atmelavr
 framework = arduino
 board = leonardo
+lib_install = 576
 
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
+lib_install = 576
 
 [env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
+lib_install = 576
 
 [env:chipkit_uc32]
 platform = microchippic32
 framework = arduino
 board = chipkit_uc32
+lib_install = 576
 
 [env:nodemcuv2]
 platform = espressif
 framework = arduino
 board = nodemcuv2
-
-[env:genuino101]
-platform = intel_arc32
-framework = arduino
-board = genuino101
-
-[env:teensy31]
-platform = teensy
-framework = arduino
-board = teensy31
+lib_install = 576
