--- a/examples/LCD-I2C/platformio.ini
+++ b/examples/LCD-I2C/platformio.ini
@@ -57,7 +57,7 @@ board = chipkit_uc32
 lib_install = 576
 
 [env:nodemcuv2]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = nodemcuv2
 lib_install = 576
