--- a/examples/W5100-Thingspeak/platformio.ini
+++ b/examples/W5100-Thingspeak/platformio.ini
@@ -51,6 +51,6 @@ framework = arduino
 board = chipkit_uc32
 
 [env:nodemcuv2]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = nodemcuv2
