--- a/platformio.ini
+++ b/platformio.ini
@@ -48,7 +48,7 @@ framework = arduino
 board = chipkit_uc32
 
 [env:nodemcuv2]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
