PlatformIO: fix dependencies
Signed-off-by: Roman Ondráček <ondracek.roman@centrum.cz>

--- a/examples/LCD-I2C/platformio.ini
+++ b/examples/LCD-I2C/platformio.ini
@@ -24,40 +24,40 @@ src_dir = LCD-I2C
 platform = atmelavr
 framework = arduino
 board = uno
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:leonardo]
 platform = atmelavr
 framework = arduino
 board = leonardo
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:chipkit_uc32]
 platform = microchippic32
 framework = arduino
 board = chipkit_uc32
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
 
 [env:nodemcuv2]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-lib_install = 576
+lib_install = marcoschwartz/LiquidCrystal_I2C
