--- a/examples/W5100-Thingspeak/platformio.ini
+++ b/examples/W5100-Thingspeak/platformio.ini
@@ -24,31 +24,37 @@ src_dir = W5100-Thingspeak
 platform = atmelavr
 framework = arduino
 board = uno
+lib_deps = arduino-libraries/Ethernet
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
+lib_deps = arduino-libraries/Ethernet
 
 [env:leonardo]
 platform = atmelavr
 framework = arduino
 board = leonardo
+lib_deps = arduino-libraries/Ethernet
 
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
+lib_deps = arduino-libraries/Ethernet
 
 [env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
+lib_deps = arduino-libraries/Ethernet
 
 [env:chipkit_uc32]
 platform = microchippic32
 framework = arduino
 board = chipkit_uc32
+lib_deps = arduino-libraries/Ethernet
 
 [env:nodemcuv2]
 platform = espressif8266
