--- a/examples/LCD-I2C/platformio.ini
+++ b/examples/LCD-I2C/platformio.ini
@@ -1,21 +1,12 @@
-#
-# Project Configuration File
-#
-# A detailed documentation with the EXAMPLES is located here:
-# http://docs.platformio.org/en/latest/projectconf.html
-#
-
-# A sign `#` at the beginning of the line indicates a comment
-# Comment lines are ignored.
-
-# Simple and base environment
-# [env:mybaseenv]
-# platform = %INSTALLED_PLATFORM_NAME_HERE%
-# framework =
-# board =
-#
-# Automatic targets - enable auto-uploading
-# targets = upload
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
 src_dir = LCD-I2C
@@ -24,40 +15,54 @@ src_dir = LCD-I2C
 platform = atmelavr
 framework = arduino
 board = uno
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:leonardo]
 platform = atmelavr
 framework = arduino
 board = leonardo
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:megaatmega2560]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:chipkit_uc32]
 platform = microchippic32
 framework = arduino
 board = chipkit_uc32
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
 
 [env:nodemcuv2]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-lib_install = marcoschwartz/LiquidCrystal_I2C
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C
+	roman3349/MCP980X
